# 11_async

./: .travis.yml  CMakeLists.txt  async.cpp  readme.md  test_main.cpp
include/: async.h  command_handler.h  commands_block.h  data_reader.h  special.h  statistics.h  task_queue.h
src/: main.cpp
test/: CMakeLists.txt  in5.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  test_main.cpp
test_data/: in2.txt  in3.txt  out2.txt  out3.txt  out4.txt  out5.txt
